--- a/login/templates/chat.html
+++ b/login/templates/chat.html
@@ -107,6 +107,8 @@
         }, 1200);
     };
 
+    {#alert("hello!");#}
+
     //websocket移植
     var roomName = {{ room_name }};
     var userName = {{ user_name }}
