--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -33,9 +33,9 @@
     <!-- Theme style -->
     <link href="{{ static('css/all_task_style.css') }}" rel="stylesheet" type="text/css"/>
 
-   	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{#   	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">#}
+{#	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>#}
+{#	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
 
 
     <script type="text/javascript" src="{{ static('js/sorttable.js') }}"></script>
@@ -354,6 +354,8 @@
                     {% endif %}
                 </li>
             </ul>
+
+
         </div>
 
         {% for message in get_messages(request) %}
