空内容+特殊字符检查

--- a/login/templates/FindPassword.html
+++ b/login/templates/FindPassword.html
@@ -62,7 +62,7 @@
                                       {{ csrf_input }}
 			                    	<div class="form-group">
 			                    		<h4>邮箱账号：</h4>
-			                        	<input type="email" name="email" placeholder="邮箱" class="form-username form-control" id="form-username">
+			                        	<input type="email" name="email" placeholder="邮箱" class="form-username form-control" id="form-username" required>
 			                        </div>
 
 			                        <button type="submit" class="btn">确认邮箱</button>
