--- a/login/templates/PwdReset.html
+++ b/login/templates/PwdReset.html
@@ -67,10 +67,10 @@
 
 
 
-			                    		<h4>新密码：</h4>
-                                        <input type="password" name="pwd" placeholder="NewPassword" class="form-username form-control" id="form-username">
+			                    		<h4>新密码（只能由1-30位字母或数字组成）：</h4>
+                                        <input type="password" name="pwd" placeholder="NewPassword" class="form-username form-control" id="form-username" required>
                                         <br>                                     <h4>确认密码：</h4>
-                                            <input type="password" name="cpwd" placeholder="Confirm Your Password" class="form-username form-control" id="form-username">
+                                            <input type="password" name="cpwd" placeholder="Confirm Your Password" class="form-username form-control" id="form-username" required>
 			                        </div>
 
 			                        <button type="submit" class="btn">确认修改</button>
