--- a/login/templates/regist.html
+++ b/login/templates/regist.html
@@ -87,9 +87,9 @@
                         {% endfor %}
                         {{ csrf_input }}
                         <input type="text" name="username" class="form-control" id="username"
-                               placeholder="Your Username" style="margin-bottom: 20px;" maxlength="128" required/>
+                               placeholder="Your Username（仅允许由1-30位字母或数字组成）" style="margin-bottom: 20px;" maxlength="128" required/>
                         <input type="password" name="password1" class="form-control" id="password1"
-                               placeholder="Your Password" style="margin-bottom: 20px;" maxlength="128" required/>
+                               placeholder="Your Password（仅允许由1-30位字母或数字组成）" style="margin-bottom: 20px;" maxlength="128" required/>
                         <input type="password" name="password2" class="form-control" id="password2"
                                placeholder="Confirm Password" style="margin-bottom: 20px;" maxlength="128" required/>
                         <input type="email" name="email" class="form-control" id="email" placeholder="Your Email..."
