--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -54,15 +54,14 @@
                 y.options.add(new Option("全部","-1",false,true));
                 y.options.add(new Option("选择","0"));
                 y.options.add(new Option("问答","1"));
-                y.options.add(new Option("框选","2"));
             }
-           if(x.selectedIndex == 2){
+            if(x.selectedIndex == 2){
                 y.options.add(new Option("全部","-1",false,true));
                 y.options.add(new Option("选择","0"));
                 y.options.add(new Option("问答","1"));
             }
            if(x.selectedIndex == 3){
-                y.options.add(new Option("全部","-1",false,true));
+               y.options.add(new Option("全部","-1",false,true));
                 y.options.add(new Option("选择","0"));
                 y.options.add(new Option("问答","1"));
                 y.options.add(new Option("框选","2"));
@@ -596,7 +595,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                             <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -689,7 +688,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                                     <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -810,7 +809,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span
@@ -928,7 +927,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                             <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -1036,7 +1035,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1135,7 +1134,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1227,7 +1226,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1321,7 +1320,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
